# BodyPartIndex.py

./: README.md  TODO.md  pyproject.toml
body_part_index/: __init__.py  __main__.py  body_part.py  body_part_index.py
body_part_index/data/: body_parts.json
tests/: __init__.py  conftest.py  sample_body_parts.json  test_body_part.py  test_body_part_index.py  test_main.py
