[tool.poetry]
name = "body_part_index"
version = "0.1.0"
description = "Standard anatomic location tags for medical imaging informatics"
authors = ["Tarik Alkasab <tarik.alkasab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
blue = "0.5.2"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pyupgrade = "*"
bandit = "*"
pip-audit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
