# TODO: Set up PyPI publishing
[tool.poetry]
name = "body_part_index"
version = "0.1.0"
description = "Standard anatomic location tags for medical imaging informatics"
readme = "README.md"
authors = ["Anatomic Locations Project <info@anatomiclocations.org>"]
license = "ISC"
homepage = "https://www.anatomiclocations.org"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
blue = "0.5.2"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pyupgrade = "*"
bandit = "*"
pip-audit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

